# hylacvietv2

./: .gitignore  README.md  background.jfif  docker-compose.yml  hylacviet.jfif  hylacvietlogo.jfif  migrate_images.sh  setup-vps.sh
admin/: .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
admin/src/: api.ts  style.css  vite-env.d.ts
admin/src/router/: index.ts
admin/src/stores/: auth.ts
admin/src/views/: Categories.vue  Dashboard.vue  Layout.vue  Login.vue  Orders.vue  Products.vue  Settings.vue
backend/: Cargo.toml  Dockerfile  schema.sql
backend/src/: db.rs  main.rs  models.rs
backend/src/handlers/: auth.rs  categories.rs  mod.rs  orders.rs  products.rs  settings.rs  upload.rs
frontend/: .browserslistrc  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/public/images/: craft-fabric.webp.bak  craft-final.webp.bak  craft-measuring.webp.bak
frontend/src/app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/lib/: constants.ts
frontend/src/styles/: about.css  animations.css  bespoke.css  contact.css  filter-drawer.css  floating-contact.css  hero.css  layout.css  main.css  product-detail-v2.css  product-detail.css  products-v2.css  products.css  reset.css  sections.css  tokens.css  (+3 more)
roadmap/: nhat-ky.md  roadmap.md  spec-driven.md  thong-tin-du-an.md
roadmap/_archive/: giao-dien-trang-chu.md  imperial-zen-header-hero.md  imperial-zen-research.md  last-mile-css-research.md
traefik/: docker-compose.yml
traefik/letsencrypt/: acme.json
(+40 files in other folders)
