[package]
name = "hylacviet-api"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "=0.4.38", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
jsonwebtoken = "9"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
